# atlas-osm-geocoder

./: .gitignore  README.md
.superpowers/sdd/: task-9-report.md
docs/: api.md  getting-started.md  self-hosting.md
docs/plans/: 2026-07-14-atlas-extract-acceptance.md  2026-07-14-atlas-extract.md  PLAN-NOTES.md
docs/specs/: 2026-07-14-open-source-geocoder-design.md
extract/: Cargo.toml
extract/src/: boundaries.rs  emit.rs  error.rs  hierarchy.rs  ids.rs  lib.rs  main.rs  nodes.rs  taxonomy.rs
extract/src/layers/: address.rs  common.rs  details.rs  mod.rs  place.rs  poi.rs  postcode.rs  street.rs
extract/tests/: address_monaco.rs  boundaries_monaco.rs  e2e_monaco.rs  layers_monaco.rs  nodes_monaco.rs  poi_monaco.rs  postcode_details_monaco.rs
extract/tests/fixtures/: README.md  get_monaco.sh  monaco.osm.pbf
