[package]
name = "atlas-extract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas-extract"
path = "src/main.rs"

[dependencies]
osmpbf = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
blake2 = "0.10"
h3o = { version = "0.7", features = ["geo"] }
geo = "0.29"
fxhash = "0.2"
